--- a/PhotoDrop/Photo.storyboard
+++ b/PhotoDrop/Photo.storyboard
@@ -22,40 +22,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6AG-Mu-gT5">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6AG-Mu-gT5">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qDa-Yu-J2w">
-                                <rect key="frame" x="8" y="22" width="359" height="40.5"/>
+                                <rect key="frame" x="8" y="22" width="359" height="50"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="WoP-NV-9wB">
-                                        <rect key="frame" x="0.0" y="0.0" width="317" height="40.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="WoP-NV-9wB">
+                                        <rect key="frame" x="0.0" y="0.0" width="317" height="50"/>
                                         <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="OG8-wD-zxG">
-                                                <rect key="frame" x="0.0" y="0.0" width="317" height="20"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kty-kj-1zu">
-                                                        <rect key="frame" x="0.0" y="0.0" width="43" height="20"/>
-                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
-                                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bo7-b8-vNw" userLabel="Report Button">
-                                                        <rect key="frame" x="297" y="0.0" width="20" height="20"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="20" id="4we-QC-7zq"/>
-                                                            <constraint firstAttribute="width" secondItem="bo7-b8-vNw" secondAttribute="height" multiplier="1:1" id="NSP-vX-0Sa"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                        <state key="normal" image="report-user"/>
-                                                        <connections>
-                                                            <action selector="blockUserButtonTapped:" destination="ay9-6C-557" eventType="touchUpInside" id="AXS-Qr-4fT"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                            </stackView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kty-kj-1zu">
+                                                <rect key="frame" x="0.0" y="0.0" width="317" height="25.5"/>
+                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fsX-Y9-BJi">
-                                                <rect key="frame" x="0.0" y="20" width="317" height="20.5"/>
+                                                <rect key="frame" x="0.0" y="29.5" width="317" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
@@ -63,7 +46,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HwS-Ga-GWu" userLabel="Dismiss Button">
-                                        <rect key="frame" x="327" y="4.5" width="32" height="32"/>
+                                        <rect key="frame" x="327" y="9" width="32" height="32"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="32" id="Gp8-Tw-Taf"/>
                                             <constraint firstAttribute="width" secondItem="HwS-Ga-GWu" secondAttribute="height" multiplier="1:1" id="mNA-Xn-fGu"/>
@@ -75,15 +58,24 @@
                                     </button>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z3o-ZK-RFi" userLabel="Gem It Button ">
-                                <rect key="frame" x="309" y="601" width="50" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="kac-Po-XkZ"/>
-                                    <constraint firstAttribute="width" secondItem="z3o-ZK-RFi" secondAttribute="height" multiplier="1:1" id="pTS-3I-b12"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z3o-ZK-RFi" userLabel="Gem It Button ">
+                                <rect key="frame" x="286" y="578" width="75" height="75"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="diamond-gold-like-inactive"/>
                                 <connections>
                                     <action selector="dropLikeButtonTapped:" destination="ay9-6C-557" eventType="touchUpInside" id="p7l-jN-VC1"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bo7-b8-vNw" userLabel="Report Button">
+                                <rect key="frame" x="335" y="80" width="32" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="32" id="4we-QC-7zq"/>
+                                    <constraint firstAttribute="width" secondItem="bo7-b8-vNw" secondAttribute="height" multiplier="1:1" id="NSP-vX-0Sa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" image="report-user"/>
+                                <connections>
+                                    <action selector="blockUserButtonTapped:" destination="ay9-6C-557" eventType="touchUpInside" id="AXS-Qr-4fT"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -93,11 +85,11 @@
                             <constraint firstAttribute="trailing" secondItem="6AG-Mu-gT5" secondAttribute="trailing" id="7te-6L-cY6"/>
                             <constraint firstItem="qDa-Yu-J2w" firstAttribute="top" secondItem="hEo-0Z-VWN" secondAttribute="top" constant="22" id="Uxc-da-3B4"/>
                             <constraint firstItem="qDa-Yu-J2w" firstAttribute="leading" secondItem="hEo-0Z-VWN" secondAttribute="leading" constant="8" id="e6l-8i-Pi9"/>
+                            <constraint firstItem="bo7-b8-vNw" firstAttribute="top" secondItem="qDa-Yu-J2w" secondAttribute="bottom" constant="8" id="fJm-qH-yrz"/>
                             <constraint firstAttribute="trailing" secondItem="qDa-Yu-J2w" secondAttribute="trailing" constant="8" id="fmR-cs-iOY"/>
-                            <constraint firstAttribute="bottom" secondItem="z3o-ZK-RFi" secondAttribute="bottom" constant="16" id="jjr-sj-JWH"/>
+                            <constraint firstAttribute="trailing" secondItem="bo7-b8-vNw" secondAttribute="trailing" constant="8" id="k2s-vM-8F0"/>
                             <constraint firstAttribute="bottom" secondItem="6AG-Mu-gT5" secondAttribute="bottom" id="lGh-XD-WuP"/>
                             <constraint firstItem="6AG-Mu-gT5" firstAttribute="leading" secondItem="hEo-0Z-VWN" secondAttribute="leading" id="xtv-sr-flJ"/>
-                            <constraint firstAttribute="trailing" secondItem="z3o-ZK-RFi" secondAttribute="trailing" constant="16" id="yT1-3B-p4t"/>
                         </constraints>
                     </view>
                     <connections>
@@ -109,12 +101,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cB9-UX-F5z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2" y="138"/>
+            <point key="canvasLocation" x="0.80000000000000004" y="137.18140929535232"/>
         </scene>
     </scenes>
     <resources>
         <image name="close-button" width="39" height="39"/>
-        <image name="diamond-gold-like-inactive" width="50" height="42"/>
+        <image name="diamond-gold-like-inactive" width="73" height="62"/>
         <image name="report-user" width="21" height="21"/>
     </resources>
 </document>
