--- a/PhotoDrop/PhotoList.storyboard
+++ b/PhotoDrop/PhotoList.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background_diamond_blue" translatesAutoresizingMaskIntoConstraints="NO" id="3l4-Dr-RDH">
-                                <rect key="frame" x="0.0" y="311" width="375" height="44"/>
+                                <rect key="frame" x="27.5" y="200" width="320" height="266"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="99" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GiH-tc-UjO">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
@@ -126,15 +126,13 @@
                         <color key="backgroundColor" red="1" green="0.91363656520843506" blue="0.61428797245025635" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="GUd-nO-AuN" firstAttribute="top" secondItem="GiH-tc-UjO" secondAttribute="bottom" id="1iV-29-LfJ"/>
+                            <constraint firstItem="3l4-Dr-RDH" firstAttribute="centerX" secondItem="6q1-kV-66l" secondAttribute="centerX" id="4Kt-gM-832"/>
                             <constraint firstItem="Bgo-F7-j2F" firstAttribute="centerX" secondItem="6q1-kV-66l" secondAttribute="centerX" id="9os-e9-VtJ"/>
-                            <constraint firstItem="3l4-Dr-RDH" firstAttribute="leading" secondItem="6q1-kV-66l" secondAttribute="leading" id="UAU-Fv-AsT"/>
-                            <constraint firstItem="3l4-Dr-RDH" firstAttribute="top" secondItem="IiR-oR-FMP" secondAttribute="bottom" constant="291" id="Xxi-Rt-Pbf"/>
-                            <constraint firstAttribute="trailing" secondItem="3l4-Dr-RDH" secondAttribute="trailing" id="ZqS-8m-AIF"/>
+                            <constraint firstItem="3l4-Dr-RDH" firstAttribute="centerY" secondItem="6q1-kV-66l" secondAttribute="centerY" id="XQk-NI-g14"/>
                             <constraint firstItem="GiH-tc-UjO" firstAttribute="leading" secondItem="6q1-kV-66l" secondAttribute="leading" id="bde-5x-saF"/>
                             <constraint firstItem="GUd-nO-AuN" firstAttribute="top" secondItem="Bgo-F7-j2F" secondAttribute="bottom" constant="50" id="d6S-VP-u24"/>
                             <constraint firstItem="GiH-tc-UjO" firstAttribute="top" secondItem="IiR-oR-FMP" secondAttribute="bottom" id="oKe-lg-6nf"/>
                             <constraint firstAttribute="trailing" secondItem="GiH-tc-UjO" secondAttribute="trailing" id="qMh-3X-SEC"/>
-                            <constraint firstItem="GUd-nO-AuN" firstAttribute="top" secondItem="3l4-Dr-RDH" secondAttribute="bottom" constant="312" id="xlY-cS-AkT"/>
                         </constraints>
                     </view>
                     <connections>
