--- a/PhotoDrop/Drop.storyboard
+++ b/PhotoDrop/Drop.storyboard
@@ -47,7 +47,7 @@
                                     <constraint firstAttribute="height" constant="32" id="3uI-jK-dCc"/>
                                     <constraint firstAttribute="width" secondItem="Ilc-ck-Ouy" secondAttribute="height" multiplier="107:133" id="yc7-v3-Zqd"/>
                                 </constraints>
-                                <state key="normal" image="flash-button">
+                                <state key="normal" image="FlashOff">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -141,9 +141,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="FlashOff" width="64" height="64"/>
         <image name="back-button-black" width="32" height="32"/>
         <image name="camera-button" width="89" height="89"/>
         <image name="camera-rotate-black" width="32" height="32"/>
-        <image name="flash-button" width="214" height="266"/>
     </resources>
 </document>
