--- a/PhotoDrop/Drop.storyboard
+++ b/PhotoDrop/Drop.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sav-ME-bra">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="sav-ME-bra">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -72,7 +72,7 @@
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="u4E-dh-Lg1"/>
                                     <constraint firstAttribute="width" constant="90" id="zRZ-1B-jOi"/>
                                 </constraints>
-                                <state key="normal" title="Take Photo" image="camera-button">
+                                <state key="normal" title="Take Photo" image="take-a-photo-button">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <userDefinedRuntimeAttributes>
@@ -95,7 +95,7 @@
                                     <constraint firstAttribute="width" constant="32" id="ryb-5T-Pyb"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                <state key="normal" image="camera-rotate-black"/>
+                                <state key="normal" image="camera-rotate"/>
                                 <connections>
                                     <action selector="cameraPositionTogglePressed:" destination="sav-ME-bra" eventType="touchUpInside" id="I5J-wW-hd9"/>
                                 </connections>
@@ -143,7 +143,7 @@
     <resources>
         <image name="FlashOff" width="64" height="64"/>
         <image name="back-button-black" width="32" height="32"/>
-        <image name="camera-button" width="89" height="89"/>
-        <image name="camera-rotate-black" width="32" height="32"/>
+        <image name="camera-rotate" width="32" height="32"/>
+        <image name="take-a-photo-button" width="89" height="89"/>
     </resources>
 </document>
