--- a/PhotoDrop/Loading.storyboard
+++ b/PhotoDrop/Loading.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,21 +18,35 @@
                         <viewControllerLayoutGuide type="top" id="KgF-Lw-OTv"/>
                         <viewControllerLayoutGuide type="bottom" id="NHR-q7-klw"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="PJ9-SX-UCI">
+                    <view key="view" contentMode="scaleToFill" id="FXj-pu-fFG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Duu-71-2SA">
-                                <rect key="frame" x="113.5" y="314" width="148" height="39"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright © 2017 PhotoDrop. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="LfP-cC-cyl">
+                                <rect key="frame" x="20" y="626.5" width="336" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhotoDrop" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="uhY-5M-CG3">
+                                <rect key="frame" x="20" y="202" width="335" height="43"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="diamond app icon" translatesAutoresizingMaskIntoConstraints="NO" id="yD6-Ry-t9W">
+                                <rect key="frame" x="35" y="253" width="305" height="222"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.2274509804" green="0.59215686270000001" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Duu-71-2SA" firstAttribute="centerY" secondItem="PJ9-SX-UCI" secondAttribute="centerY" id="2ei-xR-arU"/>
-                            <constraint firstItem="Duu-71-2SA" firstAttribute="centerX" secondItem="PJ9-SX-UCI" secondAttribute="centerX" id="fUH-Jo-l8a"/>
+                            <constraint firstItem="uhY-5M-CG3" firstAttribute="centerY" secondItem="FXj-pu-fFG" secondAttribute="bottom" multiplier="1/3" constant="1" id="6yL-28-vXK"/>
+                            <constraint firstAttribute="centerX" secondItem="uhY-5M-CG3" secondAttribute="centerX" id="8Hp-ig-R3o"/>
+                            <constraint firstAttribute="bottom" secondItem="LfP-cC-cyl" secondAttribute="bottom" constant="20" id="S4h-kH-2ZK"/>
+                            <constraint firstItem="uhY-5M-CG3" firstAttribute="leading" secondItem="FXj-pu-fFG" secondAttribute="leading" constant="20" symbolic="YES" id="Xad-HO-2R6"/>
+                            <constraint firstItem="LfP-cC-cyl" firstAttribute="leading" secondItem="FXj-pu-fFG" secondAttribute="leading" constant="20" symbolic="YES" id="iKU-AW-ERk"/>
+                            <constraint firstAttribute="centerX" secondItem="LfP-cC-cyl" secondAttribute="centerX" id="yep-CI-xLP"/>
                         </constraints>
                     </view>
                     <connections>
@@ -60,4 +75,7 @@
             <point key="canvasLocation" x="755" y="31"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="diamond app icon" width="768" height="768"/>
+    </resources>
 </document>
